force-app/main/default/objects/Medicine__c/fields/Drug_Class__c.field-meta.xml
<CustomField>
    <fullName>Drug_Class__c</fullName>
    <label>Drug Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>