force-app/main/default/objects/Medicine__c/fields/Is_Prescription_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Prescription_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Prescription Required</label>
    <type>Checkbox</type>
</CustomField>