force-app/main/default/objects/Medicine__c/fields/Last_Stock_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Stock_Update__c</fullName>
    <label>Last Stock Update</label>
    <type>Date</type>
</CustomField>