force-app/main/default/objects/Medicine__c/fields/Salt_Composition__c.field-meta.xml
<CustomField>
    <fullName>Salt_Composition__c</fullName>
    <label>Salt Composition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salt_Composition__c</fullName>
            </value>
            <value>
                <fullName>255</fullName>
            </value>
            <value>
                <fullName>Paracetamol</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>