force-app/main/default/objects/Medicine__c/fields/Supplier_Contact__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Contact__c</fullName>
    <label>Supplier Contact</label>
    <type>Phone</type>
</CustomField>