force-app/main/default/objects/Medicine__c/fields/Use_Cases__c.field-meta.xml
<CustomField>
    <fullName>Use_Cases__c</fullName>
    <label>Use Cases</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Multi-Select Picklist</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
            <value>
                <fullName>Use_Cases__c</fullName>
            </value>
            <value>
                <fullName>Fever</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>