force-app/main/default/objects/Medicine__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Field_1__c</columns>
    <columns>Medicine_Name__c</columns>
    <columns>Salt_Composition__c</columns>
    <columns>Manufacturer__c</columns>
    <columns>Batch_Number__c</columns>
    <columns>Category__c</columns>
    <columns>Drug_Class__c</columns>
    <columns>Use_Cases__c</columns>
    <columns>Expiry_Date__c</columns>
    <columns>Price_Per_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>